Fixed cmake file, now compiling successfully

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(GenericScheduler)
 
 add_compile_options(-std=c++11)
 
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wl,--no-as-needed -ldl" )
+
 set(SQLITE_WRAPPER_DIR ${CMAKE_SOURCE_DIR}/dependency/kompex-sqlite-wrapper)
 
 add_custom_command(
@@ -27,14 +29,15 @@ add_library(Scheduler STATIC
 
 add_library(sqlite-wrapper STATIC IMPORTED) # or STATIC instead of SHARED
 set_target_properties(sqlite-wrapper PROPERTIES
-  IMPORTED_LOCATION "${SQLITE_WRAPPER_DIR}/lib/libkompex-sqlite-wrapper.so"
+  IMPORTED_LOCATION "${SQLITE_WRAPPER_DIR}/lib/libkompex-sqlite-wrapper.a"
   INTERFACE_INCLUDE_DIRECTORIES "${SQLITE_WRAPPER_DIR}/include"
   )
-
 
 add_executable(example 
   src/main.cpp
   )
 
-find_library(SQLITE_WRAPPER libkompex-sqlite-wrapper HINTS ${SQLITE_WRAPPER_DIR}/lib)
-target_link_libraries(example Scheduler sqlite-wrapper)
+find_package(Threads REQUIRED)
+#find_package(sqlite3 REQUIRED)
+
+target_link_libraries(example Scheduler sqlite-wrapper Threads::Threads sqlite3)
